# ComfyUI-FolderIncrementer

./: .gitignore  CHANGELOG.md  README.md  __init__.py  _test_nodes.py  _test_sam_load.py  conftest.py  dependency_checker.py  folder_incrementer.py  param_history.db  pyproject.toml  requirements.txt  test_diagnostics.py
.github/workflows/: publish_action.yml
docs/: color-science.md  exr-io.md  inpaint-suite.md  mask-editing.md  matting-refinement.md  plate-tools.md  render-pass.md  sam-segmentation.md  utility-nodes.md  vae-merge.md  video-temporal-bbox.md
example_workflows/: README.md  basic_sam_segmentation.json  bbox_pipeline.json  draw_shape_multi.json  mask_editing_toolkit.json  sam_vitmatte_pipeline.json  spline_mask_editor.json  video_mask_propagation.json  video_motion_detection.json
js/: folder_incrementer.js  image_comparer.js  mec_advanced_paint.js  parameter_memory.js  points_bbox_editor.js  sam_multi_mask_picker.js  spline_mask_editor.js  universal_reroute.js
nodes/: background_remover.py  batch_version_manager.py  bbox_nodes.py  color_science.py  exr_io.py  exr_metadata_reader.py  geometry_nodes.py  image_comparer.py  inpaint_suite.py  luminance_keyer.py  mask_batch_manager.py  mask_composite.py  mask_draw_frame.py  mask_failure_explainer.py  mask_math.py  mask_preview.py  mask_propagate_video.py  mask_transform_xy.py  matting_node.py  mec_paint_suite.py  metadata_nodes.py  model_analysis.py  model_manager.py  model_metadata_extractor.py  motion_mask_tracker.py  parameter_memory.py  plate_tools.py  points_mask_editor.py  render_pass.py  sam_mask_generator.py  sam_model_loader.py  sam_multi_mask_picker.py  sam_vitmatte_pipeline.py  sec_matanyone_pipeline.py  semantic_segment.py  spline_mask_editor.py  stabilization_utils.py  temporal_anchor.py  temporal_consistency_checker.py  trimap_generator.py  (+8 more)
tasks/: todo.md
tests/: conftest.py  test_nodes.py
