[project]
name = "comfyui-customnodepacks"
description = "Custom node packs for ComfyUI: FolderIncrementer (auto-versioning) + MaskEditControl (pinpoint mask editing with SAM2/SAM3, per-axis erode/expand, point editor, bbox tools, video mask propagation)."
version = "1.1.0"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/Likhith-24/ComfyUI-CustomNodePacks"

[tool.comfy]
PublisherId = "likhith-24" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-CustomNodePacks" # Display name for the Custom Node. Can be changed later.
Icon = "https://i.pinimg.com/736x/5d/52/19/5d5219ef27c1530bea027ff95d352e05.jpg" # SVG, PNG, JPG or GIF (MAX. 800x400px)